# expose

./: '  .gitignore  Cargo.toml  ]  build  build_help  dotted.txt  go.mod  main  main.go  readme  srcpretty  testingdir_pretty  todo  ws_check
examples/: expose.toml
src/: cmd.rs  file.rs  main.rs  watch.go  watch.rs
testingdir/: binary_search.py  hash_map.c  isogram.go  test
testingdir/a/: a.c  test.md
testingdir/a/b/: .vimrc
testingdir/dotted/: test.c
