[package]
name = "expose"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0 License"
authors = ["lukasjoc <jochamlu@gmail.com>"]
readme = "readme"
description = "Listen for File Changes"
repository = "https://github.com/lukasjoc/expose"

[build-dependencies]
clap = "2"

[[bin]]
name = "expose"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
notify = "4"
warp = "0.2"
serde_json = "1.0"
clap = { version = "2", default-features = false }
tokio = { version = "0.2", features = ["macros", "sync"] }
serde = {version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
