[package]
name = "expose"
version = "0.0.1"
edition = "2018"
description = "Listen for File Changes on a system"
readme = "readme"
homepage = "https://github.com/lukasjoc/expose"
repository = "https://github.com/lukasjoc/expose"
license = "ISC"
authors = ["lukasjoc <jochamlu@gmail.com>"]

include = ["src/**/*", "license", "readme"]

[build-dependencies]
clap = "2"

[[bin]]
name = "expose"

[dependencies]
clap = { version = "2", default-features = false }
notify = "4"
ws = "0.9"
ctrlc = "3"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1

