[package]
license = "ISC"
version = "0.0.1"
name = "expose"
description = "Listen for File Changes on a system"
edition = "2018"
readme = "readme"
homepage = "https://github.com/lukasjoc/expose"
repository = "https://github.com/lukasjoc/expose"
authors = ["lukasjoc <jochamlu@gmail.com>"]
include = ["src/**/*", "license", "readme"]

[build-dependencies]
clap = "2"

[[bin]]
name = "expose"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "2", default-features = false }
notify = "4"
ws = "0.9"
ctrlc = "3"
walkdir = "2"
regex = "1.5"

